<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PittFood</string>
    <string name="map_launch">Launch Map</string>
    <string name="menu_settings">Settings</string>
    <string name="exit_menu">Exit</string>
    <string name="title_activity_list_fragment">ListFragment</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab">PittFood</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_select_rec">PittFood</string>
    <string name="recButton">Recommend</string>
    <string name="rec_new">New</string>
    <string name="rec_old">Old</string>
    <string name="rec_both">Both</string>
    <string name="amount_5">5</string>
    <string name="amount_10">10</string>
    <string name="amount_15">15</string>
    <string name="rec_select_text">Select recommendation type and number of restaurants:</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="loading">Generating recommendation...</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="newuser">New to PittFood?</string>
    <string name="signup">Sign Up</string>
    <string name="currentuser">Already has an account?</string>
    <string name="logout">Log out</string>
    <string name="name">Name</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="welcome">Welcome!</string>
    <string name="title_activity_rating">Rating</string>
    <string name="rate">Rate the restaurants that you have been to.</string>
    <string name="gotorec">Next</string>
    

</resources>