<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectRecActivity" >

    <ImageView
        android:id="@+id/pitt_logo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#002649"
        android:contentDescription="pitt_logo"
        android:src="@drawable/pitt" />
    
    <ImageView
        android:id="@+id/food_logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#002649"
        android:layout_marginTop="120dp"
        android:contentDescription="food_logo"
        android:src="@drawable/food" />
        
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
		android:layout_above="@+id/radioGroup2"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rec_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_new" />

        <RadioButton
            android:id="@+id/rec_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rec_old" />

        <RadioButton
            android:id="@+id/rec_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rec_both" />
    </RadioGroup>
    
    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rec_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/amount_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_5" />

        <RadioButton
            android:id="@+id/amount_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/amount_10" />

        <RadioButton
            android:id="@+id/amount_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_15" />
    </RadioGroup>

    <Button
        android:id="@+id/rec_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="@string/recButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/rec_select_text"
        android:textSize="20sp" />

</RelativeLayout>